<resources>
    <string name="app_name">SmartLock</string>
    <string name="action_settings">Settings</string>

    <string name="api_key">API KEY</string>
    <string name="device_id">DEVICE ID</string>
    <string name="remote_id">REMOTE ID</string>
    <string name="save">SAVE</string>
    <string name="open_door">OPEN DOOR</string>
    <string name="door_open_history">DOOR OPEN HISTORY</string>
    <string name="door_status_history">DOOR STATUS HISTORY</string>
    <string name="settings">SETTINGS</string>

    <string name="open_text">OPEN</string>
    <string name="close_text">CLOSE</string>
    <string name="successful_text">SUCCESS!</string>
    <string name="infrared_text">INFRARED </string>
    <string name="remote_text">REMOTE</string>
    <string name="fingerprint_text">FINGERPRINT</string>
    <string name="date_text">DATE</string>
    <string name="time_text">TIME</string>

    <string name="not_empty_text">Cannot be empty!</string>
    <string name="save_successful_text">Save successful!</string>

    <string name="_996_text">996</string>
    <string name="offline_text">Offline</string>
    <string name="online_text">Online</string>
</resources>