<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/api_key" />

    <EditText
        android:id="@+id/et_api_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/api_key" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_id" />

    <EditText
        android:id="@+id/et_device_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/device_id"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remote_id" />

    <EditText
        android:id="@+id/et_remote_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/_996_text"
        android:inputType="number" />

    <Button
        android:id="@+id/et_save_key_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveKeyInfo"
        android:text="@string/save" />


</LinearLayout>